# GGB

./: .gitignore  AI对话系统存档总结.md  ANDROID_FEATURES_IMPLEMENTED.md  ANDROID_IROH_SUPPORT_SUMMARY.md  ANDROID_MODULAR_STRUCTURE.md  ANDROID_REAL_IMPLEMENTATION.md  API_CORRECTION_SUMMARY.md  Cargo.toml  Cargo_android_build.toml  README.md  UPDATES_20251230_CRYPTO_REFACTOR.md  build.ps1  build_and_test.ps1  build_android_complete.ps1  build_check.ps1  build_output.txt  decentralized_training_backup.bundle  demo_test_file.txt  gpu_inference_server_clean.py  iroh_final_conclusion.md  iroh_p2p_achievement_summary.md  multi_machine_setup.md  package-lock.json  package.json  requirements.txt  run_cargo_build.bat  run_test.ps1  test_build.rs  test_results.md  test_simple.ps1  training_report.json  vite.config.ts  启动集成系统.bat  启动集成系统.ps1  集成使用说明.md
android/: README.md  build.gradle  proguard-rules.pro
android/src/main/cpp/: CMakeLists.txt  ggb_jni.cpp  williw_jni.cpp
android_lib/: Cargo.toml
android_lib_full/: Cargo.toml
benches/: privacy_performance_benchmark.rs
benchmarks/: performance_test.rs
config/: adaptive_balance.toml  balanced_privacy.toml  high_performance_privacy.toml  privacy_example.toml
decentralized-training-contract/: Anchor-modular.toml  Anchor.toml  Cargo.toml
decentralized-training-contract/programs/contribution-tracking/: Cargo.toml
decentralized-training-contract/programs/contribution-tracking/src/: lib.rs
decentralized-training-contract/programs/governance/: Cargo.toml
decentralized-training-contract/programs/governance/src/: lib.rs
decentralized-training-contract/programs/node-management/: Cargo.toml
decentralized-training-contract/programs/node-management/src/: lib.rs
decentralized-training-contract/programs/reward-management/: Cargo.toml
decentralized-training-contract/programs/reward-management/src/: lib.rs
decentralized-training-contract/programs/shared/types/: Cargo.toml
decentralized-training-contract/programs/shared/types/src/: lib.rs
decentralized-training-contract/scripts/: deploy-modular.ps1  deploy-modular.sh
decentralized-training-contract/tests/: decentralized-training-contract.ts
docs/: API.md  API_CLEANUP_SUMMARY.md  COLLABORATION_IMPLEMENTATION_GUIDE.md  COMMS_REFACTORING_PLAN.md  COMMS_STRUCTURE.md  CONTRACT_ANALYSIS.md  DEPLOYMENT.md  HUGGINGFACE_INTEGRATION.md  IROH_CROSS_NETWORK_GUIDE.md  IROH_IMPLEMENTATION_SUMMARY.md  IROH_P2P_GUIDE.md  IROH_SECURE_P2P_GUIDE.md  MOBILE_DEPLOYMENT_GUIDE.md  MODULAR_MIGRATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  P2P_DISTRIBUTION_GUIDE.md  P2P_FRONTEND_INTEGRATION_GUIDE.md  P2P_FRONTEND_INTEGRATION_SUMMARY.md  PRIVACY_GUIDE.md  PRIVACY_PERFORMANCE_BALANCE_MILESTONE.md  QUICKSTART.md  QUICK_DEPLOY.md  REFACTORING_GUIDE.md  SOLANA_MODULE.md  TESTING.md  TROUBLESHOOTING.md  WORKERS_API.md  WORKERS_DATABASE.md  WORKERS_DEPLOYMENT.md  WORKERS_DEPLOY_GUIDE.md  deploy_manual.md  nn.model.md  test_results.md  test_summary.md  传递数据类型.md  传递方法.md
examples/: comms_distance_test.rs  desktop_app_integration_example.rs  direct_send.rs  enhanced_p2p_demo.rs  hf_model_demo.rs  iroh_local_demo.rs  iroh_network_demo.rs  iroh_persistent_file_receiver.rs  iroh_persistent_receiver.rs  iroh_relay_p2p.rs  iroh_robust_local.rs  iroh_secure_p2p.rs  model_distribution_demo.rs  multi_node_test.rs  network_distance_integration_test.rs  network_distance_test.rs  p2p_frontend_integration_test.rs  p2p_model_distribution_demo.rs  p2p_model_distribution_demo.toml  p2p_with_send.rs  privacy_demo.rs  sample_model.npy  send_model.rs  simple_component_test.rs  simple_distance_test.rs  simple_model_test.rs  simple_p2p_demo.rs  simple_rust_integration_test.rs  test_lfm25_components.rs  test_metadata_uploader.rs  upload_real_metadata.rs
frontend/: p2p_manager.html  p2p_manager_wasm.html
ios/: GGB.h  README.md
monitoring/: dashboard.json  monitor.ps1
scripts/: build_android.ps1  build_android.sh  build_ios.sh  build_wasm.sh  clean_android_idea.bat  clean_android_idea.ps1  create_sample_model.py  deploy-workers.ps1  deploy.sh  install_android_ndk.ps1  manual_test_iroh.ps1  quick_build.ps1  run_iroh_tests.ps1  schema.sql  setup_network_demo.ps1  setup_tauri_android.ps1  start_private_node.ps1  start_private_node.sh  test-wasm-performance.ps1  test-workers.ps1  test_cross_computer.ps1  test_iroh_auto.ps1  test_iroh_local.ps1  test_manual_config.ps1  test_multi_node.ps1  test_multi_node.sh  test_p2p_distribution.ps1  test_p2p_distribution.sh  test_solana_integration.ps1  upgrade_gradle.ps1  validate_contract_logic.py
src/: App.tsx  args.rs  blockchain.rs  comms.rs  config.rs  consensus.rs  crypto.rs  device.rs  ffi.rs  index.css  index.html  inference.rs  lib.rs  main.rs  network_distance_demo.rs  node.rs  security.rs  stats.rs  topology.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json  test_api.rs
src-tauri/ICON/: chuangjian.eps
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  williw.psd
src-tauri/src/: api_client.rs  commands.rs  events.rs  main.rs  state.rs
src/rust_modules/: Cargo.toml  README.md  hf_model_helper.py
src/rust_modules/metadata_generator/: Cargo.toml  README.md
src/rust_modules/metadata_generator/scripts/: generate_metadata.py
src/rust_modules/metadata_uploader/: Cargo.toml
src/rust_modules/metadata_uploader/src/: lib.rs
src/rust_modules/model_downloader/: README.md  huggingface_loader.rs
src/rust_modules/model_downloader/src/: lib.rs
src_android/: lib.rs
test_model/: config.json
test_output/: node_0_stats.json  node_1_stats.json  node_2_stats.json
tests/: DEVICE_DETECTION_FIX_SUMMARY.md  device_detection_test.rs  (+11 more)
wasm/: Cargo.toml  build-wasm.ps1  build-wasm.sh  build.rs  wasm-pack.toml
wasm/src/: lib.rs
williw-use-master/williw-use-master/rust_modules/model_downloader/: Cargo.toml
williw-use-master/williw-use-master/rust_modules/model_splitter/: Cargo.toml  README.md
williw-use-master/williw-use-master/rust_modules/model_splitter/scripts/: split_model.py
williw-use-master/williw-use-master/rust_modules/model_splitter/src/: lib.rs
(+189 files in other folders)
