[package]
name = "williw"
version = "0.1.1"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "time", "sync"] }
iroh = "0.95.1"

async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"
rand = "0.9.2"
anyhow = "1.0"
ndarray = "0.17.1"
ndarray-npy = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2.2.0"
sha3 = "0.10"
hex = "0.4"
bs58 = "0.5.1"
chacha20 = "0.9"
aes-gcm = "0.10"
ring = "0.17"
zeroize = "1.7"
chacha20poly1305 = "0.10"
aes = "0.8"
cipher = "0.4"
subtle = "2.5"
block-modes = "0.9"
ctr = "0.9"
aead = "0.5"
blake3 = "1.5"
rayon = "1.8"

thiserror = "2.0.17"
parking_lot = "0.12"
rcgen = "0.14.6"
futures = "0.3"
rustls = { version = "0.23.36", features = [] }
clap = { version = "4.5.54", features = ["derive"] }
reqwest = { version = "0.13.1", features = ["json"] }
url = "2.5.8"
ethers = { version = "2.0", features = ["ws", "rustls"], optional = true }
ethers-core = { version = "2.0", optional = true }
sysinfo = { version = "0.37.2", default-features = true }
battery = "0.7"
libloading = "0.9"

# WASM和零知识证明依赖
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3.83", optional = true }
web-sys = { version = "0.3", optional = true, features = [] }
nori = { version = "0.1", optional = true }
serde-wasm-bindgen = { version = "0.6.5", optional = true }

[features]
default = []
ffi = []
blockchain = ["async-trait", "ethers", "ethers-core"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "serde-wasm-bindgen"]
workers = ["wasm"]
zk_proof = ["nori"]

# 为 Android 构建配置库类型
[lib]
name = "williw"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[[example]]
name = "multi_node_test"
path = "examples/multi_node_test.rs"

[[bin]]
name = "analyze_training"
path = "tools/analyze_training.rs"

# WASM目标特定依赖
[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.7.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# 开发依赖
[dev-dependencies]
wasm-bindgen-test = "0.3.56"

# 发布配置优化
[profile.release]
lto = true
codegen-units = 1
opt-level = "s"  # 优化WASM大小

[profile.release.wasm]
opt-level = "z"  # 最大优化WASM大小
panic = "abort"  # 减少WASM大小



