[package]
name = "williw"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt", "time", "sync"] }
iroh = "0.8"

async-trait = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9.8"
rand = "0.9.2"
anyhow = "1.0"
ndarray = "0.17.1"
ndarray-npy = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
ed25519-dalek = "2.2.0"
sha3 = "0.10"
hex = "0.4"
bs58 = "0.5.1"
chacha20 = "0.9"
aes-gcm = "0.10"
ring = "0.17"
zeroize = "1.6.0"
chacha20poly1305 = "0.10"
aes = "0.8"
cipher = "0.4"
subtle = "2.5"

# Rust modules for model processing
model-downloader = { path = "src/rust_modules/model_downloader" }
metadata-generator = { path = "src/rust_modules/metadata_generator" }
metadata-uploader = { path = "src/rust_modules/metadata_uploader" }
model-splitter = { path = "src/rust_modules/model_splitter" }

# HTTP client for model operations
reqwest = { version = "0.13.1", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
log = "0.4"

# File transfer and integrity
md5 = "0.7"
blake3 = "1.5"
digest = "0.10"

# CLI argument parsing
clap = { version = "4.0", features = ["derive"] }

# WebAssembly support (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# Concurrency utilities
parking_lot = "0.12"
rayon = "1.8"

# System and device detection
sysinfo = { version = "0.37.2", default-features = true }
libloading = "0.9"
battery = "0.7"

# Cryptographic utilities
cbc = "0.1"
block-padding = "0.3"

# Async utilities
futures = "0.3"
thiserror = "2.0.17"

# Blockchain dependencies (optional)
ethers = { version = "2.0", features = ["ws", "rustls"], optional = true }
ethers-core = { version = "2.0", optional = true }

# WASM和零知识证明依赖
serde-wasm-bindgen = { version = "0.6.5", optional = true }
web-sys = { version = "0.3", optional = true, features = [] }
nori = { version = "0.1", optional = true }

# Android JNI依赖
jni = { version = "0.21", optional = true }
android_log = { version = "0.1", optional = true }
lazy_static = { version = "1.4", optional = true }

[features]
default = ["async-trait"]
ffi = []
android = ["jni", "android_log", "lazy_static"]
blockchain = ["async-trait", "ethers", "ethers-core"]
wasm = ["wasm-bindgen", "web-sys", "js-sys", "wasm-bindgen-futures", "console_error_panic_hook"]
workers = ["wasm", "async-trait"]
zk_proof = ["nori"]

# 为 Android 构建配置库类型
[lib]
name = "williw"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

# 修复二进制名称冲突
[[bin]]
name = "williw-bin"
path = "src/main.rs"

[[bin]]
name = "p2p_model_distribution_demo"
path = "src/bin/p2p_model_distribution_demo.rs"

[[example]]
name = "multi_node_test"
path = "examples/multi_node_test.rs"

[[example]]
name = "simple_distance_test"
path = "examples/simple_distance_test.rs"

[[example]]
name = "comms_distance_test"
path = "examples/comms_distance_test.rs"

[[example]]
name = "desktop_app_integration_example"
path = "examples/desktop_app_integration_example.rs"

[[example]]
name = "hf_model_demo"
path = "examples/hf_model_demo.rs"

[[example]]
name = "model_distribution_demo"
path = "examples/model_distribution_demo.rs"

[[example]]
name = "p2p_frontend_integration_test"
path = "examples/p2p_frontend_integration_test.rs"

[[example]]
name = "p2p_model_distribution_demo"
path = "examples/p2p_model_distribution_demo.rs"

[[example]]
name = "simple_model_test"
path = "examples/simple_model_test.rs"

[[example]]
name = "simple_rust_integration_test"
path = "examples/simple_rust_integration_test.rs"

[[example]]
name = "test_metadata_uploader"
path = "examples/test_metadata_uploader.rs"

[[example]]
name = "upload_real_metadata"
path = "examples/upload_real_metadata.rs"

[[bin]]
name = "analyze_training"
path = "src/training/tools/analyze_training.rs"

[[bin]]
name = "verify_detection"
path = "src/bin/verify_detection.rs"

# WASM目标特定依赖
[target.'cfg(target_arch = "wasm32")'.dependencies]
worker = { version = "0.7.2", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

# 开发依赖
[dev-dependencies]
wasm-bindgen-test = "0.3.56"

# 发布配置优化
[profile.release]
lto = true
codegen-units = 1
opt-level = "s"  # 优化WASM大小

[profile.release.wasm]
opt-level = "z"  # 最大优化WASM大小
panic = "abort"  # 减少WASM大小
