[package]
name = "williw_android"
version = "0.1.0"
edition = "2021"

[lib]
name = "williw"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# 核心依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"

# Android JNI依赖
jni = "0.21"
android_log = "0.1"
lazy_static = "1.4"

# 并发和同步
parking_lot = "0.12"

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 设备检测
sysinfo = { version = "0.37", default-features = false }

[features]
default = ["android"]
android = []

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
