[workspace]
members = [
    "programs/shared/types",
    "programs/node-management",
    "programs/contribution-tracking", 
    "programs/reward-management",
    "programs/governance"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
