[package]
name = "williw-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
parking_lot = "0.12"
sysinfo = "0.37.2"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Williw core library
williw = { path = "..", features = ["default"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
