[package]
name = "williw-desktop"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.0.6", features = ["devtools"] }
tauri-plugin-shell = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
parking_lot = "0.12"
sysinfo = "0.30"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }

# Williw core library
williw = { path = "..", features = ["default"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
