[package]
name = "ggb-wasm"
version = "0.1.0"
edition = "2021"
description = "GGB去中心化算力系统WASM模块"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
console_error_panic_hook = { version = "0.1" }
rand = "0.9.2"
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"

[dependencies.getrandom]
version = "0.3.4"
features = ["js"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
