[package]
name = "metadata-generator"
version = "0.1.0"
edition = "2021"
description = "Rust library for generating model metadata from PyTorch state_dict"
license = "MIT OR Apache-2.0"
authors = ["Williw Team"]
repository = "https://github.com/williw/metadata-generator"

[lib]
name = "metadata_generator"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
