[package]
name = "metadata-uploader"
version = "0.1.0"
edition = "2021"
description = "Rust library for uploading metadata to Hugging Face repositories"
license = "MIT OR Apache-2.0"
authors = ["Williw Team"]
repository = "https://github.com/williw/metadata-uploader"

[lib]
name = "metadata_uploader"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
