[package]
name = "shared-types"
version = "0.1.0"
description = "Shared types for decentralized training contracts"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shared_types"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
